--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
 				<th>XL</th>				
 			</tr>
 		</thead>
+		<tbody>
 		<tr class="one">
 			<th>waist</th>
 			<td>25</td>
@@ -42,6 +43,7 @@
 			<td>25</td>
 			<td>25</td>
 		</tr>
+		</tbody>
 	</table>
 </body>
 
