--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
@@ -20,7 +21,7 @@
 		</thead>
 		<tbody>
 		<tr class="one">
-			<th>waist</th>
+			<td class="two">Waist</td>
 			<td>25</td>
 			<td>28</td>
 			<td>30</td>
@@ -28,7 +29,7 @@
 			<td>32</td>
 		</tr>
 		<tr>
-			<th>Chest</th>
+			<td class="two">Chest</td>
 			<td>34</td>
 			<td>34</td>
 			<td>38</td>
@@ -36,7 +37,7 @@
 			<td>41</td>
 		</tr>
 		<tr>
-			<th>Sleeve</th>
+			<td class="two">Sleeve</td>
 			<td>23</td>
 			<td>24</td>
 			<td>24</td>
