--- a/main.html
+++ b/main.html
@@ -11,20 +11,12 @@
 	<table>
 		<thead>
 			<tr>
-<!-- 				<th>part</th>
+				<th>part</th>
 				<th>XS</th>
 				<th>S</th>
 				<th>M</th>
 				<th>L</th>
-				<th>XL</th>				 -->
-				
-				<td class="two">Part</td>
-				<td class="two">XS</td>
-				<td class="two">S</td>
-				<td class="two">M</td>
-				<td class="two">L</td>
-				<td class="two">XL</td>
-				
+				<th>XL</th>				
 			</tr>
 		</thead>
 		<tbody>
